# wish_and_swish

./: Cargo.toml  DESIGN-DOC.excalidraw  README.MD  build.rs  memory.x  model.rpw  wakeword.sh
.cargo/: config.toml
.github/workflow/: swish.yml
.github/workflows/: build.yml  swish.yml
assets/: model.ppn
assets/lib/: pv_porcupine_params.h
src/: actuator.rs  engine.rs  main.rs  microphone.rs
