[package]
name = "wish_and_swish"
version = "0.2.2"
edition = "2024"
authors = ["Christian Mbaba"]

[dependencies]
alloc-cortex-m = "0.4.4"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "defmt", "executor-thread"] }
embassy-nrf = { version = "0.3.1", features = ["nrf52833"] }
embassy-time = "0.4.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
