[package]
name = "wish_and_swish"
version = "0.2.4"
edition = "2024"
authors = ["Christian Mbaba"]

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "defmt", "executor-thread"] }
embassy-nrf = { version = "0.3.1", features = ["nrf52833"] }
embedded-alloc = "0.6.0"
linked_list_allocator = "0.10.5"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

[build-dependencies]
bindgen = "0.71.1"

[package.metadata.cargo]
include = ["assets/model.ppn"]