[package]
name = "wish_and_swish"
version = "0.3.1"
edition = "2024"
authors = ["Christian Mbaba"]

[dependencies]
# candle-core = "=0.1.2"
# cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
# cortex-m-rt = "0.7.5"
cpal = "=0.15.3"
# defmt = "0.3.10"
# defmt-rtt = "0.4.1"
# embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "defmt", "executor-thread"] }
# embassy-nrf = { version = "0.3.1", features = ["nrf52833"] }
# embassy-time = "0.4.0"
# embedded-alloc = "0.6.0"
# panic-probe = { version = "0.3.2", features = ["print-defmt"] }
